--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -59,6 +59,7 @@
 @import 'blocks/budgets';
 @import 'blocks/commentary-add.scss';
 @import 'blocks/hearings-status.scss';
+@import 'blocks/hearings-result.scss';
 
 // main page
 @import "blocks/news-notice";
