--- a/source/sass/blocks/your-comment.scss
+++ b/source/sass/blocks/your-comment.scss
@@ -28,6 +28,16 @@
     padding-right: 20px;
     padding-bottom: 20px;
   }
+
+  &--declined {
+    .your-comment__status p {
+      color: #E55050;
+    }
+
+    .your-comment__text {
+      color: #707B8C;
+    }
+  }
 }
 
 .your-comment__top-wrapper {
@@ -68,10 +78,13 @@
   @media (min-width: $desktop-width) {
     position: relative;
     top: -6px;
-}
+  }
+
+  @media (max-width: 600px) {
+    order: 2;
+  }
 
   @include mobile {
-    order: 3;
     margin-bottom: 24px;
     width: 100%;
   }
@@ -141,6 +154,27 @@
   @media (max-width: 600px) {
     order: 2;
     margin-bottom: 20px;
+  }
+}
+
+.your-comment__decline-msg {
+  margin: 0;
+  margin-bottom: 16px;
+  width: 100%;
+  padding: 12px 16px;
+  border: 1px solid #F3A8A8;
+  border-radius: 5px;
+  background-color: #ffffff;
+  font-size: rem(13px);
+  line-height: rem(17px);
+  color: #354052;
+
+  @media (max-width: 600px) {
+    order: 3;
+  }
+
+  @include mobile {
+    margin-top: -10px;
   }
 }
 
