--- a/source/sass/blocks/public-debate.scss
+++ b/source/sass/blocks/public-debate.scss
@@ -111,14 +111,10 @@
     grid-template-areas:
       "a    c"
       "b    c";
+
+    &:hover:not(.focus-visible) .button-star {
+      opacity: 1;
     }
-
-  &:hover:not(.focus-visible) .button-star {
-    color: var(--color-stroke, $light-grey)
-  }
-
-  &:hover:not(.focus-visible) .public-debate__period-wrapper--favorite .button-star {
-    color: var(--color-interactive-accent, $blue-accent);
   }
 
   & > * {
@@ -265,18 +261,20 @@
   height: 19px;
   padding: 0;
   margin-left: auto;
-  color: transparent;
+  transition: opacity $style-change-duration;
 
   @media (min-width: $desktop-width) {
     height: 21px;
     margin-left: 24px;
-    margin-top: 12px;
     grid-area: c;
-  }
+    align-self: center;
 
-  svg {
-    transition: color $style-change-duration;
+    opacity: 0;
   }
+}
+
+.public-debate__period-wrapper--favorite .button-star {
+  color: var(--color-interactive-accent, $blue-default);
 }
 
 .public-debate__period-text {
