--- a/source/sass/blocks/public-debate.scss
+++ b/source/sass/blocks/public-debate.scss
@@ -99,7 +99,7 @@
 }
 
 .public-debate__item {
-  padding: 24px 0 24px;
+  padding: 24px 0;
 
   border-bottom: 1px solid var(--color-stroke, $light-grey);
 
@@ -360,18 +360,22 @@
 .public-debate--all {
   padding: 24px 0 64px;
 
+  @media (min-width: $tablet-width) {
+    padding-top: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+
+  }
+
   .public-debate__back-btn {
     margin-left: 2px;
 
     font-size: rem(18px);
     line-height: 130%;
 
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
     @media (min-width: $tablet-width) {
-
+      margin-bottom: 40px;
     }
 
     @media (min-width: $desktop-width) {
@@ -383,11 +387,8 @@
     font-size: rem(30px);
     line-height: rem(36px);
 
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
     @media (min-width: $tablet-width) {
+      max-width: unset;
       font-size: rem(40px);
       line-height: rem(47px);
     }
@@ -413,6 +414,7 @@
   }
 
   .public-debate__filters {
+    width: 100%;
     margin-bottom: 16px;
 
     @media (min-width: $tablet-width) {
@@ -425,18 +427,70 @@
   }
 
   .public-debate__select {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+
+    border: 1px solid var(--color-stroke, $light-grey);
+    border-radius: 5px;
 
     @media (max-width: $tablet-width - 1) {
       display: none;
     }
 
     @media (min-width: $tablet-width) {
-
+      margin-bottom: 16px;
     }
 
     @media (min-width: $desktop-width) {
 
-    }}
+    }
+
+    .ss-single-selected {
+      padding: 15px 16px 15px 23px;
+
+      @media (max-width: $tablet-width - 1) {
+        padding: 15px 16px;
+        justify-content: center;
+      }
+    }
+
+    .placeholder {
+      flex: 0 0 auto;
+      width: auto;
+
+      font-size: rem(15px);
+      line-height: 135%;
+    }
+
+    .ss-content {
+      top: 41px;
+      left: 0;
+      width: 219px;
+
+      background-color: #ffffff;
+    }
+
+    .ss-main .ss-single-selected .ss-arrow {
+      margin-left: 12px;
+    }
+
+    .ss-main .ss-single-selected .ss-arrow span {
+      width: 8px;
+      height: 8px;
+    }
+
+    .form-select__checkbox-wrapper {
+      padding: 23px;
+      margin: 0 0 0 auto;
+      font-size: rem(15px);
+      line-height: 135%;
+
+      label {
+        position: relative;
+      }
+    }
+  }
 
   .public-debate__list {
     margin-bottom: 57px;
