--- a/source/sass/blocks/public-debate.scss
+++ b/source/sass/blocks/public-debate.scss
@@ -362,10 +362,7 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 40px;
-  }
-
-  @media (min-width: $desktop-width) {
-
+    padding-bottom: 80px;
   }
 
   .public-debate__back-btn {
@@ -376,10 +373,6 @@
 
     @media (min-width: $tablet-width) {
       margin-bottom: 40px;
-    }
-
-    @media (min-width: $desktop-width) {
-
     }
   }
 
@@ -394,22 +387,15 @@
     }
 
     @media (min-width: $desktop-width) {
-
-    }}
+      margin-bottom: 40px;
+    }
+  }
 
   .public-debate__description {
     margin-bottom: 24px;
 
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
     @media (min-width: $tablet-width) {
       margin-bottom: 40px;
-    }
-
-    @media (min-width: $desktop-width) {
-
     }
   }
 
@@ -440,10 +426,6 @@
 
     @media (min-width: $tablet-width) {
       margin-bottom: 16px;
-    }
-
-    @media (min-width: $desktop-width) {
-
     }
 
     .ss-single-selected {
@@ -495,225 +477,14 @@
   .public-debate__list {
     margin-bottom: 57px;
 
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
     @media (min-width: $tablet-width) {
       margin-bottom: 48px;
     }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__item {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__date-wrapper {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__date {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__status {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__joined {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__link {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__period-wrapper {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__period-text {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__period-dates {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__status--orange {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__period-wrapper--favorite {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__status--blue {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__joined--visible {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
-
-  .public-debate__status--green {
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
-
-    @media (min-width: $desktop-width) {
-
-    }}
+  }
 
   .public-debate__paginator {
     margin-top: 0;
     margin-bottom: 56px;
-
-    @media (max-width: $tablet-width - 1) {
-
-    }
-
-    @media (min-width: $tablet-width) {
-
-    }
 
     @media (min-width: $desktop-width) {
       margin-bottom: 80px;
@@ -727,11 +498,14 @@
     }
 
     @media (min-width: $tablet-width) {
-
+      .archive-link__hidden {
+        display: none;
+      }
     }
 
     @media (min-width: $desktop-width) {
-
+      padding: 22px 24px;
+      max-width: 1035px;
     }
 
     .archive-link__btn {
