добавляет страницу активность разводящая

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -62,6 +62,8 @@
 @import 'blocks/commentary-add.scss';
 @import 'blocks/hearings-status.scss';
 @import 'blocks/hearings-result.scss';
+@import 'blocks/activity-index';
+@import 'blocks/activity-list';
 
 // main page
 @import "blocks/news-notice";
