--- a/source/sass/blocks/public-debate.scss
+++ b/source/sass/blocks/public-debate.scss
@@ -407,19 +407,6 @@
     }
   }
 
-  .public-debate__filters {
-    width: 100%;
-    margin-bottom: 16px;
-
-    @media (min-width: $tablet-width) {
-      display: none;
-    }
-
-    span {
-      padding: 0;
-    }
-  }
-
   .public-debate__select {
     display: flex;
     flex-flow: row wrap;
@@ -429,7 +416,9 @@
     border-radius: 5px;
 
     @media (max-width: $tablet-width - 1) {
-      display: none;
+      margin-bottom: 16px;
+      flex-flow: column wrap;
+      align-items: flex-start;
     }
 
     @media (min-width: $tablet-width) {
@@ -478,6 +467,11 @@
 
       label {
         position: relative;
+      }
+
+      @media (max-width: $tablet-width - 1) {
+        padding: 15px 16px;
+        margin-left: 0;
       }
     }
   }
