--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -43,6 +43,11 @@
 @import "blocks/special-popup";
 @import "blocks/status-info";
 @import "blocks/info-tooltip";
+@import "blocks/project-status";
+@import "blocks/description";
+@import "blocks/date";
+@import "blocks/application-period";
+@import "blocks/project-link";
 @import "blocks/main-empty";
 @import "blocks/info-banner";
 @import "blocks/info-banner-button";
