Добавляет 'Активность - Рейтингование 2'

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -69,6 +69,9 @@
 @import 'blocks/hearings-result.scss';
 @import 'blocks/activity-index';
 @import 'blocks/activity-list';
+@import 'blocks/rating';
+@import 'blocks/rating-list';
+@import 'blocks/button-like';
 
 // main page
 @import "blocks/news-notice";
