--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -22,6 +22,7 @@ $light-grey: #e3e8ee;
 $select-grey: #f5f6f7;
 $grey: #707b8c;
 $grey-default: #a6abb3;
+$grey-lighter: #a6abb2;
 $pale-red: #fef9f9;
 $red: #e55050;
 $color-bg: #f9f9fa;
