--- a/source/sass/blocks/filter-2.scss
+++ b/source/sass/blocks/filter-2.scss
@@ -1,119 +1,119 @@
 .filter-2 {
-    .filter__header {
-        margin-bottom: 43px;
-    }
+  .filter__header {
+    margin-bottom: 43px;
+  }
 }
 
 .filter-2__body {
-    display: flex;
-    padding: 20px 32px;
-    border: 1px solid var(--color-stroke, $light-grey);
-    border-radius: $border-radius;
+  display: flex;
+  padding: 20px 32px;
+  border: 1px solid var(--color-stroke, $light-grey);
+  border-radius: $border-radius;
 }
 
 .filter-2__counter {
-    width: 270px;
-    font-size: rem(13px);
-    line-height: rem(17px);
-    color: var(--color-text, $grey-default);
+  width: 270px;
+  font-size: rem(13px);
+  line-height: rem(17px);
+  color: var(--color-text, $grey-default);
 }
 
 .filter-2__caption {
-    margin: 0;
-    margin-right: 8px;
-    display: inline-block;
-    font-weight: 500;
-    font-size: rem(16px);
-    line-height: rem(22px);
-    color: #354052;
+  margin: 0;
+  margin-right: 8px;
+  display: inline-block;
+  font-weight: 500;
+  font-size: rem(16px);
+  line-height: rem(22px);
+  color: var(--color-text, #354052);
 }
 
 .filter-2__counter-avaliable {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 24px;
-    height: 24px;
-    padding: 0 8px;
-    font-size: rem(16px);
-    line-height: rem(22px);
-    color: var(--color-text, $blue-default);
-    background-color: var(--color-bg-secondary, $light-blue);
-    border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 24px;
+  height: 24px;
+  padding: 0 8px;
+  font-size: rem(16px);
+  line-height: rem(22px);
+  color: var(--color-text, $blue-default);
+  background-color: var(--color-bg-secondary, $light-blue);
+  border-radius: 50%;
 }
 
 .filter-2__select {
-    margin: 0;
-    margin-left: auto;
-    display: inline-block;
+  margin: 0;
+  margin-left: auto;
+  display: inline-block;
 }
 
 .filter-2__checkbox {
-    margin: 0;
-    margin-left: 101px;
+  margin: 0;
+  margin-left: 101px;
 }
 
 @include tablet {
-    .filter-2 {
-        margin-bottom: 40px;
-    }
+  .filter-2 {
+    margin-bottom: 40px;
+  }
 
-    .filter-2__body {
-        padding: 23px 23px;
-    }
+  .filter-2__body {
+    padding: 23px 23px;
+  }
 
-    .filter-2 {
-        .filter__header {
-            max-width: 740px;
-        }
+  .filter-2 {
+    .filter__header {
+      max-width: 740px;
     }
+  }
 
-    .filter-2__checkbox {
-        margin: 0;
-        margin-left: 60px;
-    }
+  .filter-2__checkbox {
+    margin: 0;
+    margin-left: 60px;
+  }
 }
 
 @include mobile {
-    .filter-2 {
-        margin-top: 35px;
-        margin-bottom: 30px;
+  .filter-2 {
+    margin-top: 35px;
+    margin-bottom: 30px;
 
-        .filter__open-btn {
-            display: none;
-        }
-
-        .filter__header {
-            margin-bottom: 35px;
-        }
+    .filter__open-btn {
+      display: none;
     }
 
-    .filter-2__body {
-        margin-bottom: 31px;
-        flex-direction: column;
-        padding: 21px 17px;
-
-        .form-select {
-            & .ss-content {
-                left: 72px;
-            }
-        }
+    .filter__header {
+      margin-bottom: 35px;
     }
+  }
 
-    .filter-2__counter {
-        margin-bottom: 31px;
-    }
+  .filter-2__body {
+    margin-bottom: 31px;
+    flex-direction: column;
+    padding: 21px 17px;
 
-    .filter-2__caption {
-        margin-right: 9px;
+    .form-select {
+      & .ss-content {
+        left: 72px;
+      }
     }
+  }
 
-    .filter-2__select {
-        margin: 0;
-        margin-bottom: 32px;
-    }
+  .filter-2__counter {
+    margin-bottom: 31px;
+  }
 
-    .filter-2__checkbox {
-        margin: 0;
-    }
+  .filter-2__caption {
+    margin-right: 9px;
+  }
+
+  .filter-2__select {
+    margin: 0;
+    margin-bottom: 32px;
+  }
+
+  .filter-2__checkbox {
+    margin: 0;
+  }
 }
