--- a/source/sass/blocks/hearings.scss
+++ b/source/sass/blocks/hearings.scss
@@ -1,239 +1,239 @@
 .hearings-page {
-    padding-top: 40px;
-    padding-bottom: 120px;
+  padding-top: 40px;
+  padding-bottom: 120px;
 
-    @include tablet {
-        padding-bottom: 85px;
-    }
+  @include tablet {
+    padding-bottom: 85px;
+  }
 
-    @include mobile {
-        padding-top: 30px;
-        padding-bottom: 64px;
-    }
+  @include mobile {
+    padding-top: 30px;
+    padding-bottom: 64px;
+  }
 }
 
 .hearings {
-    @media (min-width: $desktop-width) {
-        display: grid;
-        grid-template-columns: minmax(740px, 1fr) 360px;
-        grid-column-gap: 20px;
-        grid-template-areas:
-        "a   a"
-        "b   c"
-        "d   c"
-        "e   c"
-        "f   c"
-        "g   c"
-        "h   c";
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: minmax(740px, 1fr) 360px;
+    grid-column-gap: 20px;
+    grid-template-areas:
+      "a   a"
+      "b   c"
+      "d   c"
+      "e   c"
+      "f   c"
+      "g   c"
+      "h   c";
+  }
+
+  > * {
+    align-self: start;
+  }
+
+  &--result {
+    grid-template-areas:
+      "a   a"
+      "b   c"
+      "result c"
+      "d   c"
+      "e   c"
+      "f   c"
+      "g   c"
+      "h   c";
+
+    .hearings__status {
+      margin-bottom: 15px;
+
+      @include tablet {
+        margin-bottom: 40px;
+      }
+
+      @include mobile {
+        margin-bottom: 46px;
+      }
     }
 
-    > * {
-        align-self: start;
+    .hearings__time-frame {
+      @include mobile {
+        margin-bottom: 35px;
+      }
     }
-
-    &--result {
-        grid-template-areas:
-        "a   a"
-        "b   c"
-        "result c"
-        "d   c"
-        "e   c"
-        "f   c"
-        "g   c"
-        "h   c";
-
-        .hearings__status {
-            margin-bottom: 15px;
-
-            @include tablet {
-                margin-bottom: 40px;
-            }
-
-            @include mobile {
-                margin-bottom: 46px;
-            }
-        }
-
-        .hearings__time-frame {
-            @include mobile {
-                margin-bottom: 35px;
-            }
-        }
-    }
+  }
 }
 
 .hearings__result {
-    grid-area: result;
+  grid-area: result;
 }
 
 .hearings__title {
-    grid-area: a;
-    margin-bottom: 40px;
-    max-width: 100%;
+  grid-area: a;
+  margin-bottom: 40px;
+  max-width: 100%;
 
-    @include mobile {
-        margin-bottom: 22px;
-    }
+  @include mobile {
+    margin-bottom: 22px;
+  }
 }
 
 .hearings__status {
-    grid-area: b;
+  grid-area: b;
+  margin-bottom: 25px;
+
+  @include tablet {
+    margin-bottom: 40px;
+  }
+
+  @include mobile {
     margin-bottom: 25px;
-
-    @include tablet {
-        margin-bottom: 40px;
-    }
-
-    @include mobile {
-        margin-bottom: 25px;
-    }
+  }
 }
 
 .hearings__time-frame {
-    grid-area: c;
+  grid-area: c;
 
-    @media (min-width: $desktop-width) {
-        position: sticky;
-        top: 90px;
+  @media (min-width: $desktop-width) {
+    position: sticky;
+    top: 90px;
+  }
+
+  @include tablet {
+    margin-bottom: 44px;
+  }
+
+  @include mobile {
+    margin-bottom: 28px;
+  }
+
+  .project-vote__expire {
+    svg {
+      color: var(--color-text, #a6abb3);
     }
 
     @include tablet {
-        margin-bottom: 44px;
+      align-self: flex-end;
     }
 
     @include mobile {
-        margin-bottom: 28px;
+      width: 100%;
     }
+  }
 
-    .project-vote__expire {
-        svg {
-            color: var(--color-text, #a6abb3)
-        }
-
-        @include tablet {
-            align-self: flex-end;
-        }
-
-        @include mobile {
-            width: 100%;
-        }
-    }
-
-    .hearings__smaller-expire {
-        font-size: rem(13px);
-        line-height: rem(16.9px);
-    }
+  .hearings__smaller-expire {
+    font-size: rem(13px);
+    line-height: rem(16.9px);
+  }
 }
 
 .hearings__text-container {
-    grid-area: d;
-    font-size: rem(15px);
-    line-height: rem(27px);
-    color: #354052;
+  grid-area: d;
+  font-size: rem(15px);
+  line-height: rem(27px);
+  color: var(--color-text, #354052);
 
-    @include tablet {
-        margin-bottom: 40px;
-    }
+  @include tablet {
+    margin-bottom: 40px;
+  }
 
-    @include mobile {
-        margin-bottom: 30px;
-    }
+  @include mobile {
+    margin-bottom: 30px;
+  }
 }
 
 .hearings__files {
-    grid-area: e;
-    margin-bottom: 48px;
+  grid-area: e;
+  margin-bottom: 48px;
 
-    @include tablet {
-        margin-bottom: 45px;
-    }
+  @include tablet {
+    margin-bottom: 45px;
+  }
 
-    @include mobile {
-        margin-bottom: 39px;
-    }
+  @include mobile {
+    margin-bottom: 39px;
+  }
 }
 
 .hearings__gallery {
-    grid-area: f;
-    max-width: 740px;
-    margin-bottom: 47px;
+  grid-area: f;
+  max-width: 740px;
+  margin-bottom: 47px;
 
-    @include tablet {
-        max-width: 1199px;
-        margin-right: -24px;
-        margin-bottom: 40px;
+  @include tablet {
+    max-width: 1199px;
+    margin-right: -24px;
+    margin-bottom: 40px;
 
-        .swiper-slide:first-child {
-            padding-left: 0;
-        }
+    .swiper-slide:first-child {
+      padding-left: 0;
     }
+  }
 
-    @include mobile {
-        margin-right: -16px;
-    }
+  @include mobile {
+    margin-right: -16px;
+  }
 }
 
 .hearings__comments {
-    grid-area: g;
-    margin-bottom: 50px;
-    padding-bottom: 47px;
-    border-bottom: 1px solid #E3E8EE;
+  grid-area: g;
+  margin-bottom: 50px;
+  padding-bottom: 47px;
+  border-bottom: 1px solid #e3e8ee;
 
+  @include mobile {
+    margin-bottom: 42px;
+  }
+
+  .all-comments {
+    padding: 0;
+  }
+
+  .your-comment {
+    margin-bottom: 45px;
+    padding: 0;
+    background-image: none;
+  }
+
+  .your-comment__content {
     @include mobile {
-        margin-bottom: 42px;
+      padding: 24px 16px 16px 16px;
+      margin: 0;
     }
+  }
 
-    .all-comments {
-        padding: 0;
+  .your-comment__description {
+    @include mobile {
+      margin-bottom: 25px;
+      font-size: rem(13px);
+      line-height: rem(17px);
     }
+  }
 
-    .your-comment {
-        margin-bottom: 45px;
-        padding: 0;
-        background-image: none;
+  .your-comment__actions {
+    @include mobile {
+      margin-bottom: 13px;
     }
+  }
 
-    .your-comment__content {
-        @include mobile {
-            padding: 24px 16px 16px 16px;
-            margin: 0;
-        }
+  .your-comment__text {
+    @include mobile {
+      margin-bottom: 0;
+      font-size: rem(13px);
+      line-height: rem(20px);
     }
-
-    .your-comment__description {
-        @include mobile {
-            margin-bottom: 25px;
-            font-size: rem(13px);
-            line-height: rem(17px);
-        }
-    }
-
-    .your-comment__actions {
-        @include mobile {
-            margin-bottom: 13px;
-        }
-    }
-
-    .your-comment__text {
-        @include mobile {
-            margin-bottom: 0;
-            font-size: rem(13px);
-            line-height: rem(20px);
-        }
-    }
+  }
 }
 
 .hearings__back-btn {
-    grid-area: h;
-    max-width: 330px;
-    padding: 17px 26px;
-    font-size: rem(14px);
-    line-height: rem(18.9px);
+  grid-area: h;
+  max-width: 330px;
+  padding: 17px 26px;
+  font-size: rem(14px);
+  line-height: rem(18.9px);
 
-    @include mobile {
-        display: block;
-        margin: 0 auto;
-        max-width: 360px;
-        padding: 17px 30px;
-    }
+  @include mobile {
+    display: block;
+    margin: 0 auto;
+    max-width: 360px;
+    padding: 17px 30px;
+  }
 }
