--- a/source/sass/blocks/improvement-status.scss
+++ b/source/sass/blocks/improvement-status.scss
@@ -1,33 +1,33 @@
 .improvement-status {
-    margin-bottom: 5px;
-    margin-top: 0;
-    position: relative;
-    padding-left: 9px;
-    font-size: rem(14px);
-    line-height: rem(18.2px);
-    color: #70BF56;
-  
-    &--orange {
-      color: #FCA844;
-    }
-  
-    &--blue {
-      color: #2C8ECC;
-    }
-  
-    &--red {
-      color: #E55050;
-    }
-  
-    &--grey {
-      color: #A6ABB2;
-    }
-  
-    &::before {
-      content: '\25CF';
-      position: absolute;
-      top: -1px;
-      left: -1px;
-      font-size: 13px;
-    }
+  margin-bottom: 5px;
+  margin-top: 0;
+  position: relative;
+  padding-left: 9px;
+  font-size: rem(14px);
+  line-height: rem(18.2px);
+  color: var(--color-text, #70bf56);
+
+  &--orange {
+    color: var(--color-text, #fca844);
   }
+
+  &--blue {
+    color: var(--color-text, #2c8ecc);
+  }
+
+  &--red {
+    color: var(--color-text, #e55050);
+  }
+
+  &--grey {
+    color: var(--color-text, #a6abb2);
+  }
+
+  &::before {
+    content: "\25CF";
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    font-size: 13px;
+  }
+}
