--- a/source/sass/blocks/landscaping-form.scss
+++ b/source/sass/blocks/landscaping-form.scss
@@ -6,11 +6,14 @@
     -webkit-appearance: none;
     font-size: rem(16px);
     line-height: 180%;
-    color: var(--color-text, $dark-text);
+    color: var(--color-text, #354052);
+    background-color: var(--color-bg-secondary, #f9f9fa);
+    border: 1px solid var(--color-stroke, $light-grey);
 
     &::placeholder {
       font-size: rem(15px);
       line-height: rem(27px);
+      color: var(--color-text, $grey-default);
     }
 
     &:focus {
@@ -42,8 +45,6 @@
   display: block;
   width: 100%;
   resize: none;
-  background-color: #f9f9fa;
-  border: 1px solid #e3e8ee;
   border-radius: 5px;
 
   &--error {
@@ -51,7 +52,7 @@
   }
 
   &::placeholder {
-    color: #a6abb2;
+    color: var(--color-text, $grey-default);
   }
 
   &:focus {
