--- a/source/sass/blocks/your-comment.scss
+++ b/source/sass/blocks/your-comment.scss
@@ -3,7 +3,10 @@
   padding-bottom: 40px;
   margin-bottom: 0;
 
-  background-image: linear-gradient(var(--color-stroke, $light-grey), var(--color-stroke, $light-grey));
+  background-image: linear-gradient(
+    var(--color-stroke, $light-grey),
+    var(--color-stroke, $light-grey)
+  );
   background-position: left bottom;
   background-repeat: no-repeat;
   background-size: 100% 1px;
@@ -31,11 +34,11 @@
 
   &--declined {
     .your-comment__status p {
-      color: #E55050;
+      color: #e55050;
     }
 
     .your-comment__text {
-      color: #707B8C;
+      color: var(--color-text, #707b8c);
     }
   }
 }
@@ -96,18 +99,18 @@
     border-radius: 5px;
     font-size: rem(13px);
     line-height: rem(16.9px);
-    color: #2C8ECC;
+    color: #2c8ecc;
   }
 
   &--red {
     p {
-      color: #E55050;
+      color: #e55050;
     }
   }
 
   &--grey {
     p {
-      color: #707B8C;
+      color: #707b8c;
     }
   }
 }
@@ -162,12 +165,12 @@
   margin-bottom: 16px;
   width: 100%;
   padding: 12px 16px;
-  border: 1px solid #F3A8A8;
+  border: 1px solid #f3a8a8;
   border-radius: 5px;
-  background-color: #ffffff;
+  background-color: var(--color-bg-secondary, #ffffff);
   font-size: rem(13px);
   line-height: rem(17px);
-  color: #354052;
+  color: var(--color-text, #354052);
 
   @media (max-width: 600px) {
     order: 3;
