--- a/source/sass/blocks/proposal-list.scss
+++ b/source/sass/blocks/proposal-list.scss
@@ -12,9 +12,17 @@
   border-bottom: 1px solid var(--color-stroke, $light-grey);
 
   @media (min-width: $tablet-width) {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
+    display: grid;
+    grid-template-columns: 1fr 15%;
+    grid-template-areas:
+    "a  a"
+    "b  c"
+    "d  d";
+
+    > * {
+      align-self: start;
+      justify-self: start;
+    }
   }
 
   &--userless {
@@ -30,6 +38,23 @@
   }
 }
 
+.proposal-list__wrapper {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    grid-area: a;
+    margin-bottom: 4px;
+  }
+
+  @media (max-width: $tablet-width - 1) {
+    margin-bottom: 24px;
+  }
+}
+
 .proposal-list__account {
   display: flex;
   flex-flow: row wrap;
@@ -42,7 +67,6 @@
   line-height: 130%;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 4px;
     margin-right: 9px;
   }
 
@@ -67,14 +91,7 @@
   align-items: center;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 4px;
     margin-right: 9px;
-
-    min-width: 50%;
-  }
-
-  @media (max-width: $tablet-width - 1) {
-    margin-bottom: 24px;
   }
 
   svg {
@@ -93,6 +110,7 @@
 }
 
 .proposal-list__title {
+  grid-area: b;
   margin: 0;
   text-decoration: none;
 
@@ -103,45 +121,43 @@
   transition: color $style-change-duration;
 
   @media (min-width: $desktop-width) {
-    display: inline-block;
-    max-width: 80%;
-
     &:hover:not(.focus-visible) {
       color: var(--color-interactive-default, $blue-default);
     }
   }
 
   @media (min-width: $tablet-width) and (max-width: $desktop-width - 1){
-    width: 100%;
     margin-bottom: 24px;
   }
 
+
   @media (max-width: $tablet-width - 1) {
     display: block;
-    margin-top: 24px;
     margin-bottom: 22px;
   }
 
   &--shorter {
     @media (min-width: $tablet-width) and (max-width: $desktop-width - 1){
-      width: 80%;
       margin-bottom: 0;
     }
   }
 }
 
 .proposal-list__status {
+  grid-area: d;
   font-weight: 400;
   font-size: rem(15px);
   line-height: 135%;
   color: var(--color-interactive-default, $blue-default);
 
   @media (min-width: $desktop-width) {
+    grid-area: c;
     margin-left: auto;
   }
 }
 
 .proposal-list__like-counter {
+  grid-area: c;
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
@@ -230,19 +246,12 @@
 }
 
 .proposal-list__item--userless {
-  .proposal-list__address {
-    @media (min-width: $tablet-width) {
-      width: 100%;
-    }
-  }
-
   .proposal-list__title {
     font-weight: normal;
     font-size: rem(16px);
     line-height: 135%;
 
     @media (min-width: $tablet-width ) {
-      max-width: 75%;
       margin-bottom: 0;
     }
   }
