--- a/source/sass/blocks/new-project.scss
+++ b/source/sass/blocks/new-project.scss
@@ -1,5 +1,13 @@
 .new-project {
   padding-top: 16px;
+
+  @media (min-width: $desktop-width) {
+    padding-top: 0;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 14px;
+  }
 }
 
 .new-project__title {
@@ -12,6 +20,10 @@
 .new-project__rules {
   margin-bottom: 30px;
 
+  @media (min-width: $desktop-width) {
+    min-height: 23px;
+  }
+
   @media (max-width: $tablet-width - 1) {
     margin-bottom: 20px;
   }
@@ -23,15 +35,33 @@
 }
 
 .new-project__select {
-  margin-bottom: 60px;
+  margin-bottom: 80px;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
 
   @media (max-width: $tablet-width - 1) {
-    margin-bottom: 52px;
+    margin-bottom: 72px;
+  }
+
+  .ss-main:last-child {
+    width: 100%;
+    display: block;
+
+    &:last-child {
+      margin-left: 0;
+    }
   }
 
   .ss-main .ss-single-selected {
     padding: 12px 16px;
     min-height: 51px;
+    background-color: var(--color-bg-secondary, $color-bg);
+
+    @media (min-width: $desktop-width) {
+      width: 550px;
+    }
   }
 
   .ss-main .ss-single-selected .ss-arrow {
@@ -68,7 +98,11 @@
 }
 
 .new-project__contacts {
-  margin: 0 0 80px;
+  margin: 0 0 48px;
+
+  @media (max-width: $desktop-width - 1) {
+    margin-bottom: 80px;
+  }
 
   @media (max-width: $tablet-width - 1) {
     margin-bottom: 72px;
@@ -96,7 +130,7 @@
   padding-bottom: 48px;
   border-bottom: 1px solid var(--color-stroke, $light-grey);
 
-  @media (max-width: $desktop-width - 1) {
+  @media (max-width: $tablet-width - 1) {
     padding-bottom: 40px;
     margin-bottom: 40px;
   }
