добавляет попап для форматов файлов

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -78,6 +78,7 @@
 @import 'blocks/budjet';
 @import 'blocks/contacts-inputs';
 @import 'blocks/site-tip';
+@import 'blocks/warning';
 
 // main page
 @import "blocks/news-notice";
