--- a/source/sass/blocks/article-link.scss
+++ b/source/sass/blocks/article-link.scss
@@ -31,6 +31,14 @@
   &:hover:not(.focus-visible) {
     color: var(--color-interactive-accent, $blue-accent);
   }
+
+  &--no-chain {
+    display: block;
+
+    &::before {
+      display: none;
+    }
+  }
 }
 
 
